# airport-data

./: .gitignore  .octocov.yml  LICENSE-code.md  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  data-validation.yml  main.yml
api/: EDDB.csv  EDDC.csv  EDDE.csv  EDDF.csv  EDDG.csv  EDDK.csv  EDDL.csv  EDDM.csv  EDDP.csv  EDDS.csv  EDDV.csv  EDDW.csv  EDFH.csv  EDFM.csv  EDLN.csv  EDLP.csv  EDLW.csv  EDNY.csv  EDSB.csv  EDTL.csv  ETAR.csv  ETIP.csv  ETNN.csv  ETSB.csv  airports.json
data/EDGG/: EDDF.toml  EDDG.toml  EDDK.toml  EDER.toml  EDKB.toml  EDLT.toml  EDLW.toml  EDNY.toml  EDTM.toml  EDTQ.toml  ETHF.toml  ETNN.toml  GRpluginStands.txt
data/EDMM/: EDDC.toml  EDDN.toml  EDDP.toml  EDJA.toml  EDMA.toml  EDME.toml  EDMO.toml  EDMS.toml  EDNY.toml  GRpluginStands.txt
data/EDWW/: EDAY.toml  EDDW.toml  EDHI.toml  EDHL.toml  EDXW.toml  ETMN.toml
src/: combine_data.py  validate_data.py
src/tasks/: export_stands.py  read_grp_data.py  toml_data.py
src/utils/: coordinate.py
src/views/: airport.py  stand.py
tests/utils/: test_coordinates.py
tests/views/: test_airport.py
