[project]
name = "airport-data"
version = "0.1.0"
description = "Data storage for airports displayed on the Vatsim Germany website."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy==1.24.4", "pydantic==2.8.2", "requests>=2.32.4"]

[project.scripts]
toml_check = "combine_data:main"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "numpy==1.24.4",
    "pydantic==2.8.2",
    "requests>=2.32.4",
]

[tool.pytest.ini_options]
addopts = ["--cov-report=term", "--cov-report=xml:cov.xml", "--cov=src"]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
preview = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "C90",   # mccabe
    "I",     # isort
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "EM",    # flake8-errmsg
    "ICN",   # flake8-import-conventions
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "SIM",   # flake8-simplify
    "TCH",   # flake8-typechecking
    "PTH",   # flake8-use-pathlib
    "UP",    # pyupgrade
    "RUF",   # ruff-specific
    "TRY",   # tryceratops
    "FURB",  # refurb
]
ignore = ["COM812"]
